--- a/microservicecloud-provider-dept-8003/src/main/resources/application.yml
+++ b/microservicecloud-provider-dept-8003/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     driver-class-name: org.gjt.mm.mysql.Driver
     url: jdbc:mysql://localhost:3306/clouddb03
     username: root
-    password: root
+    password: zhicheng
     dbcp2:
       min-idle: 5
       initial-size: 5
