--- a/microservicecloud-parent/pom.xml
+++ b/microservicecloud-parent/pom.xml
@@ -9,6 +9,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <modules>
         <module>../microservicecloud-api</module>
+        <module>../microservicecloud-base</module>
         <module>../microservicecloud-provider-dept-8001</module>
         <module>../microservicecloud-consumer-dept-80</module>
         <module>../microservicecloud-eureka-7001</module>
@@ -67,6 +68,11 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>1.3.0</version>
+            </dependency>
+            <dependency>
+                <groupId>tk.mybatis</groupId>
+                <artifactId>mapper-spring-boot-starter</artifactId>
+                <version>1.2.3</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
