--- a/microservicecloud-consumer-dept-feign/src/main/resources/application.yml
+++ b/microservicecloud-consumer-dept-feign/src/main/resources/application.yml
@@ -7,6 +7,6 @@ feign:
 
 eureka:
   client:
-    register-with-eureka: false
+    register-with-eureka: false #false表示不向注册中心注册自己。但是在大多数的应用场景中都是即向注册中心注册自己的服务又从注册中心拿取服务
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
