--- a/microservicecloud-consumer-dept-feign/pom.xml
+++ b/microservicecloud-consumer-dept-feign/pom.xml
@@ -45,11 +45,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
-        <!--添加feign支持-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-feign</artifactId>
-        </dependency>
+        <!--添加feign支持 microservicecloud-api中已经引入了-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.cloud</groupId>-->
+            <!--<artifactId>spring-cloud-starter-feign</artifactId>-->
+        <!--</dependency>-->
     </dependencies>
 
 </project>
