--- a/microservicecloud-provider-dept-8001/src/main/resources/application.yml
+++ b/microservicecloud-provider-dept-8001/src/main/resources/application.yml
@@ -13,7 +13,7 @@ mybatis:
 
 spring:
   application:
-    name: microservicecloud-dept
+    name: microservicecloud-dept  #eurake通过这个name认定是不是同一个服务
   datasource01:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
@@ -42,7 +42,7 @@ eureka:
       defaultZone: http://eureka7001.com:7001/eureka/
 
   instance:
-    instance-id: microservicecloud-dept8001
+    instance-id: microservicecloud-dept8001 #同种服务负载均衡需要不同的实例id
     prefer-ip-address: true     #访问路径可以显示IP地址
 info:
   app.name: alicyu-microservicecloud
