使用spring.factories机制配置实现 多数据源，跨域问题，Swagger等相关通用配置

--- a/microservicecloud-provider-dept-8001/pom.xml
+++ b/microservicecloud-provider-dept-8001/pom.xml
@@ -18,7 +18,7 @@
             <artifactId>microservicecloud-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency><!-- 引入自己定义的base通用包，可以使用Dept部门Entity -->
+        <dependency><!-- 引入自己定义的base通用包，可以使用其中的通用配置 -->
             <groupId>com.alicyu.springcloud</groupId>
             <artifactId>microservicecloud-base</artifactId>
             <version>${project.version}</version>
